--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -25,3 +25,4 @@ crossorigin="anonymous"></script>
 <script src="<% if(dirName) { %><%=dirName%><%}%>/js/vendor/what-input.js"></script>
 <script src="<% if(dirName) { %><%=dirName%><%}%>/js/vendor/foundation.js"></script>
 <script src="<% if(dirName) { %><%=dirName%><%}%>/js/app.js"></script>
+<script src="<% if(dirName) { %><%=dirName%><%}%>/js/slider.js"></script>
