--- a/views/partials/slider.ejs
+++ b/views/partials/slider.ejs
@@ -24,7 +24,7 @@
     <div class='slider-buttons'>
       <% for(let i = 0; i < pages.hamburger.length; i++) {  %>
         <div class='slider-btn-div'>
-          <button class='slider-btn' onclick='changeSlider("<%=i %>")'>
+          <button class='slider-btn' id='slider-0<%=i %>' onclick='changeSlider("<%=i %>")'>
             <span ></span>
           </button>
         </div>
